examples/ingress-demo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-demo
  labels:
    app.kubernetes.io/name: ingress-demo
    app.kubernetes.io/part-of: k8s-platform-foundation
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
