examples/ingress-demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo
  namespace: ingress-demo
  labels:
    app.kubernetes.io/name: ingress-demo
    app.kubernetes.io/part-of: k8s-platform-foundation
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-demo
        app.kubernetes.io/part-of: k8s-platform-foundation
    spec:
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: application
          image: traefik/whoami:v1.11.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
