examples/ingress-demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-demo
  namespace: ingress-demo
  labels:
    app.kubernetes.io/name: ingress-demo
    app.kubernetes.io/part-of: k8s-platform-foundation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ingress-demo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
